--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,27 +22,28 @@
     </div>
 _____________________________________________________________________
 
-        <div class="user-container" id="userContainer" >
-            <% user.forEach(user => { %>
-                <div class="user-card" data-name="<%= user.name %>" data-email="<%= user.email %>" data-city="<%= user.address.city %>"data-email="<%= user.email %>" data-city="<%= user.address.city %>" >
-                    <h3><%= user.name %> <p><strong>Email:</strong> <%= user.email %></p>
-                    <p><strong>Ciudad:</strong> <%= user.address.city %></p>
-                    <p><strong>Teléfono:</strong> <%= user.phone %></p>
-                    <p><strong>Empresa:</strong> <%= user.company.name %></p></h3>
+    <div class="user-container" id="userContainer" >
+        <% user.forEach(user => { %>
+    <div class="user-card" data-name="<%= user.name %>" data-email="<%= user.email %>" data-city="<%= user.address.city %>"data-email="<%= user.email %>" data-city="<%= user.address.city %>" >
+<h3><%= user.name %> 
+        <p><strong>Email:</strong> <%= user.email %></p>
+        <p><strong>Ciudad:</strong> <%= user.address.city %></p>
+        <p><strong>Teléfono:</strong> <%= user.phone %></p>
+        <p><strong>Empresa:</strong> <%= user.company.name %></p></h3>
                    
-                </div>
-            <% }) %>
+        </div>
+        <% }) %>
         </div>
 ______________________________________________________________________
-        <h2>Agregar Usuario</h2>
+    <h2>Agregar Usuario</h2>
         <form action="/add-user" method="POST">
-            <input type="text" name="name" placeholder="Nombre" required>
-            <input type="text" name="username" placeholder="Username" required>
-            <input type="email" name="email" placeholder="Email" required>
-            <input type="text" name="city" placeholder="Ciudad" required>
-            <input type="text" name="phone" placeholder="Teléfono" required>
-            <input type="text" name="company" placeholder="Empresa" required>
-            <button type="submit">Agregar</button>
+        <input type="text" name="name" placeholder="Nombre" required>
+        <input type="text" name="username" placeholder="Username" required>
+        <input type="email" name="email" placeholder="Email" required>
+        <input type="text" name="city" placeholder="Ciudad" required>
+        <input type="text" name="phone" placeholder="Teléfono" required>
+        <input type="text" name="company" placeholder="Empresa" required>
+        <button type="submit">Agregar</button>
         </form>
     
         <script>
